# pr-opper

./: .gitignore  local_llm_comms.py  main.py  models.py  pyproject.toml  requirements.txt  router.py  worker.py
app/: main.py  worker.py
app/core/: config.py
app/models/: pr_analysis.py
app/services/: github_service.py  llm_service.py  pr_service.py
app/tasks/: pr_tasks.py
models/: llm_pr_review.py  pull_request_details.py
poc/: f_pr_to_ollama_structured.py
poc/github/: f_comment_on_pr.py  f_fetch_pull_request_details.py  f_review_comment_on_pr.py  fetch_pr.py  fetch_pr_and_review.py  fetch_repos.py  review_comment_on_pr.py  single_line_comment_on_pr.py
poc/langchain/: f_call_ollama_with_structure.py  ollama_structured_in_chain.py
poc/ollama/: list_models.py  standard_message.py  structured_message.py
